# KLTN_Frappe-CRM_Zalo_OA_Chat_Tuyen_Thu

./: .gitignore  hooks.py  modules.txt
api/: chat.py  zalo_webhook.py
crm_reports/: .pre-commit-config.yaml  README.md  pyproject.toml
zalo_oa_crm/: README.md  pyproject.toml  requirements.txt
zalo_oa_crm/doctype/zalo_oa_conversation/: test_zalo_oa_conversation.py  zalo_oa_conversation.js  zalo_oa_conversation.json  zalo_oa_conversation.py
zalo_oa_crm/doctype/zalo_oa_customer/: test_zalo_oa_customer.py  zalo_oa_customer.js  zalo_oa_customer.json  zalo_oa_customer.py
zalo_oa_crm/doctype/zalo_oa_message/: test_zalo_oa_message.py  zalo_oa_message.js  zalo_oa_message.json  zalo_oa_message.py
zalo_oa_crm/doctype/zalo_oa_webhook_log/: test_zalo_oa_webhook_log.py  zalo_oa_webhook_log.js  zalo_oa_webhook_log.json  zalo_oa_webhook_log.py
zalo_oa_crm/page/zalo_oa_chat/: zalo_oa_chat.js  zalo_oa_chat.json
zalo_oa_crm/zalo_oa_crm/: crm_injector.py  hooks.py
zalo_oa_crm/zalo_oa_crm/api/: call_log_api.py  call_simulator.py  chat.py  chat_v2.py  recording_api.py  zalo_webhook.py
zalo_oa_crm/zalo_oa_crm/page/zalo_oa_chat/: zalo_oa_chat.css  zalo_oa_chat.json
zalo_oa_crm/zalo_oa_crm/public/js/: call_logs_auto_refresh.js  crm_call_ai_summary.js  crm_form_extend.js  desk_sidebar.js  zalo_oa_sidebar.js  zalo_oa_tab.js
zalo_oa_crm/zalo_oa_crm/services/: ai_call_service.py  call_log_smoke_test.py  call_processor.py
zalo_oa_crm/zalo_oa_crm/zalo_oa_crm/: crm_injector.py
zalo_oa_crm/zalo_oa_crm/zalo_oa_crm/page/zalo_oa_chat/: zalo_oa_chat.css  zalo_oa_chat.js
(+17 files in other folders)
