[project]
name = "zalo_oa_crm"
authors = [
    { name = "Tuyen" }
]
description = "Zalo OA CRM integration"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0-dev"
